# mafiabot

./: .gitignore  Cargo.toml  MGameEditor.py  MState_Descriptions.md  README.md  Structure_Notes.md  build_mafiabot.ps1  build_mafiabot.sh  chat_test0_expected.msg  details.md  mafia_rust.code-workspace  rolegen_net.py  setup.py  test.py  test_MResp_GroupMe.py
.obsidian/: workspace.json
MafiaGame/: MafiaController.py  MafiaDiscordResponse.py  MafiaEvent.py  MafiaGameEditor.py  MafiaRules.py  MafiaState.py  MafiaUtil.py  __init__.py
data/: game_chats  lobby_chats  rolegen_opinions
doc/: Actions.md  Controller Notes.md  Core Game Notes.md  Design.md  Discord.md  Overview.md  Rules.md  TODO.md  Tasks.md
groupme/: GroupMeChat.py  GroupMeServer.py
mafia_rust/: Cargo.toml  README.md
mafiabot/: Discord_Mafia.py  GroupMeChat.py  GroupMeServer.py  MChat.py  MController.py  MEvent.py  MGame.py  MHandler.py  MInfo.py  MListener.py  MLobby.py  MMsg.py  MPlayer.py  MReq.py  MResp.py  MResp_Comm.py  MResp_GroupMe.py  MRoleGen.py  MRules.py  MSave.py  MServer.py  MState.py  MState_Descriptions.md  MState_refactor.py  MTarget.py  MTimer.py  MVengeance.py  __init__.py  mafiabot.py  resp_lib.py  start.py  test_start.py  util.py
mafiabot_old/: MEvent.py  MEx.py  MHandler.py  MPlayer.py  MResp.py  MResp_Comm.py  MServer.py  MState.py  MUser.py
mafiabot_refactor/: MInfo.py  MPlayer.py  MState.py  __init__.py
refactor/: MRole_redo.py  MState.py  MafiaGameEditor.py  MafiaGameState.py  database_design.md  details.md
src/: controller.rs  core.rs  discord.rs  discord_.rs  error.rs  lib.rs  main.rs  prelude.rs  rolegen.rs  server.rs
test/: GroupMeServer_test.py  MEvent1_test.py  (+5 more)
(+133 files in other folders)
