[package]
name = "mafia_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
rand = "0.8.5"

# Unix discord library, does not compile easily on windows
[target.'cfg(unix)'.dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }