[package]
name = "mafiabot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.34", features = ["serde"]}
enum-kinds = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
timer = "0.2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
